1.信号和槽函数

--- a/hellouiwidget.ui
+++ b/hellouiwidget.ui
@@ -39,6 +39,16 @@
     <string>PushButton</string>
    </property>
   </widget>
+  <widget class="QLineEdit" name="lineEdit">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>30</y>
+     <width>113</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
